# ecflux

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
ecflux/: tower_preproc.py
ecflux/fluxtower/: AMF_Supplementary_Metadata.csv  BASE_MeasurementHeight_20220811.csv  __init__.py  amf_tower.py  csi_tower.py  ep_tower.py  fluxtower.py  footprint.py  utils.py  variables.csv
ecflux/sandbox/: flux_data.py  tower.py  tower_footprint.py
ecflux/tower/: __init__.py  amf_tower.py  biomet.py  flux_tower.py  fluxtower.py  tower.py  tower_footprint.py  tower_proc.py  tower_utils.py  utils.py
ecflux/tower/FFP_Python/: calc_footprint_FFP_climatology.py  license.txt
fluxtower/: fluxtower.py  footprint.py
fluxtower/FFP_Python/: calc_footprint_FFP.py
src/fluxtower/: BASE_MeasurementHeight_20250430.csv  __init__.py  amf_tower.py  csi_tower.py  ep_tower.py  fluxtower.py  flx_tower.py  utils.py  variables.csv
src/fluxtower/FFP_Python/: calc_footprint_FFP.py  calc_footprint_FFP_climatology.py
src/fluxtower/metadata/: fullset_variables.csv  soil_properties.csv
tower/: buckets.py
